ES devastation correction

--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -20796,7 +20796,7 @@
       </notes>
       <segment>
         <source>Das passiert eben, wenn man eine Stadt ohne einen einzigen Einwohner zurücklässt.</source>
-        <target>Eso es lo que pasa cuando sales de un pueblo sin un solo habitante.</target>
+        <target>Esto es lo que pasa cuando se deja un a pueblo sin habitantes.</target>
       </segment>
     </unit>
     <unit id="WUioDKI" name="Das Stadttor ist zerstört!">
