ES correction(congelado de miedo->Aterrorizado)

--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -9568,7 +9568,7 @@
       </notes>
       <segment>
         <source>vor Angst erstarrt</source>
-        <target>congelado de miedo</target>
+        <target>Aterrorizado(s)</target>
       </segment>
     </unit>
     <unit id="MBMsiX2" name="Du wirst heute Nacht sterben!">
