--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -22920,7 +22920,7 @@
       </notes>
       <segment>
         <source>Du bist der {rolename} dieser Stadt.</source>
-        <target>Du bist der {rolename} dieser Stadt.</target>
+        <target>Eres el {rolename} del pueblo.</target>
       </segment>
     </unit>
     <unit id="0lP3VYZ">
