ES help button update

--- a/translations/help+intl-icu.es.xlf
+++ b/translations/help+intl-icu.es.xlf
@@ -18,7 +18,7 @@
       </notes>
       <segment>
         <source>Besuche unsere Technische Supportseite</source>
-        <target>Visite el sitio de soporte técnico</target>
+        <target>Contacta con el Soporte técnico</target>
       </segment>
     </unit>
     <unit id="FvwX8Vo" name="Die Außenwelt">
