--- a/translations/items+intl-icu.es.xlf
+++ b/translations/items+intl-icu.es.xlf
@@ -68,7 +68,7 @@
       </notes>
       <segment>
         <source>Du ziehst eine Karte... und stellst fest, dass dein Name darauf mit Blut geschrieben steht! Du erstarrst vor Schreck!</source>
-        <target><![CDATA[Lanzas una carta... ¡Y pegas un grito al descubrir que <strong>lleva tu nombre escrito con sangre</strong>! ¿Quién pudo hacerte esta broma de mal gusto?¡La impresión te deja <strong>aterrorizado</strong>]]></target>
+        <target><![CDATA[Lanzas una carta... ¡Y pegas un grito al descubrir que <strong>lleva tu nombre escrito con sangre</strong>! ¿Quién pudo hacerte esta broma de mal gusto? ¡La impresión te deja <strong>aterrorizado</strong>!]]></target>
       </segment>
     </unit>
     <unit id="NcJ93EV">
@@ -8882,7 +8882,7 @@
       </notes>
       <segment>
         <source>Du schluckst die {item} hinunter. Nach einigen Minuten beginnt dein Kopf zu pochen und deine Nase beginnt zu bluten. Der Schmerz ist nicht unerträglich, aber er ist ziemlich unangenehm...</source>
-        <target>Tragas {item}. Después devarios minutos, Sientes un dolor latente en elcráneo y tu nariz se pone a sangrar. Nada importante, pero positivo tampoco...</target>
+        <target>Tragas {item}. Después de varios minutos, Sientes un dolor latente en el cráneo y tu nariz se pone a sangrar. Nada importante, pero positivo tampoco...</target>
       </segment>
     </unit>
     <unit id="poSLxEf">
