Added building & picto proto endpoints on the JSON API

--- a/translations/docs+intl-icu.en.xlf
+++ b/translations/docs+intl-icu.en.xlf
@@ -1395,5 +1395,38 @@
         <target>Town's source server</target>
       </segment>
     </unit>
+    <unit id="IEVhx.8" name="ID der Picto">
+      <notes>
+        <note category="german">ID der Picto</note>
+        <note category="from">twig:///templates/ajax/public/apidocs.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>ID der Picto</source>
+        <target>ID der Picto</target>
+      </segment>
+    </unit>
+    <unit id="SbP2DN8" name="Wenn dieses Picto selten ist">
+      <notes>
+        <note category="german">Wenn dieses Picto selten ist</note>
+        <note category="from">twig:///templates/ajax/public/apidocs.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Wenn dieses Picto selten ist</source>
+        <target>Is this picto rare</target>
+      </segment>
+    </unit>
+    <unit id="gJd8dvU" name="Wenn dieses Picto eine Gemeinschaftsauszeichnung ist">
+      <notes>
+        <note category="german">Wenn dieses Picto eine Gemeinschaftsauszeichnung ist</note>
+        <note category="from">twig:///templates/ajax/public/apidocs.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Wenn dieses Picto eine Gemeinschaftsauszeichnung ist</source>
+        <target>Is this picto a communautary reward</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
