--- a/translations/docs+intl-icu.en.xlf
+++ b/translations/docs+intl-icu.en.xlf
@@ -1399,18 +1399,16 @@
       <notes>
         <note category="german">ID der Picto</note>
         <note category="from">twig:///templates/ajax/public/apidocs.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>ID der Picto</source>
-        <target>ID der Picto</target>
+        <target>ID of the Picto</target>
       </segment>
     </unit>
     <unit id="SbP2DN8" name="Wenn dieses Picto selten ist">
       <notes>
         <note category="german">Wenn dieses Picto selten ist</note>
         <note category="from">twig:///templates/ajax/public/apidocs.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Wenn dieses Picto selten ist</source>
@@ -1421,11 +1419,32 @@
       <notes>
         <note category="german">Wenn dieses Picto eine Gemeinschaftsauszeichnung ist</note>
         <note category="from">twig:///templates/ajax/public/apidocs.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Wenn dieses Picto eine Gemeinschaftsauszeichnung ist</source>
         <target>Is this picto a communautary reward</target>
+      </segment>
+    </unit>
+    <unit id="NXHyE2A" name="ID der Ruine">
+      <notes>
+        <note category="german">ID der Ruine</note>
+        <note category="from">twig:///templates/ajax/public/apidocs.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>ID der Ruine</source>
+        <target>ID of the Ruin</target>
+      </segment>
+    </unit>
+    <unit id="Ey80Aru" name="Erforschbare Ruine">
+      <notes>
+        <note category="german">Erforschbare Ruine</note>
+        <note category="from">twig:///templates/ajax/public/apidocs.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Erforschbare Ruine</source>
+        <target>Explorable Ruin</target>
       </segment>
     </unit>
   </file>
