--- a/translations/docs+intl-icu.es.xlf
+++ b/translations/docs+intl-icu.es.xlf
@@ -1306,5 +1306,27 @@
         <target>Wenn dieses Picto eine Gemeinschaftsauszeichnung ist</target>
       </segment>
     </unit>
+    <unit id="NXHyE2A" name="ID der Ruine">
+      <notes>
+        <note category="german">ID der Ruine</note>
+        <note category="from">twig:///templates/ajax/public/apidocs.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>ID der Ruine</source>
+        <target>ID der Ruine</target>
+      </segment>
+    </unit>
+    <unit id="Ey80Aru" name="Erforschbare Ruine">
+      <notes>
+        <note category="german">Erforschbare Ruine</note>
+        <note category="from">twig:///templates/ajax/public/apidocs.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Erforschbare Ruine</source>
+        <target>Erforschbare Ruine</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
