--- a/translations/council+intl-icu.fr.xlf
+++ b/translations/council+intl-icu.fr.xlf
@@ -1236,7 +1236,7 @@
       </notes>
       <segment>
         <source>Mit Traurigkeit und einem gewissen Sinn für Ironie beklagen wir den Verlust unseres Reiseleiters...</source>
-        <target>C'est avec tristesse et une certaine forme d'amusement que notre Guide de l'Outre-Monde nous a quitté cette nuit. Je propose donc de lui trouver un remplaçant</target>
+        <target>C'est avec tristesse et une certaine forme d'amusement que notre Guide de l'Outre-Monde nous a quittés cette nuit. Je propose donc de lui trouver un remplaçant</target>
       </segment>
     </unit>
     <unit id="T29m76.">
