--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -3090,7 +3090,7 @@
       </notes>
       <segment>
         <source>Verrat! {citizen} ist gestorben: {cod}.</source>
-        <target>{citizen} nous a quitté : {cod}.</target>
+        <target>{citizen} nous a quittés : {cod}.</target>
       </segment>
     </unit>
     <unit id="2UDexHy">
@@ -3110,7 +3110,7 @@
       </notes>
       <segment>
         <source>{citizen} hat seinen letzten Atemzug getan: {cod}!</source>
-        <target>{citizen} nous a quitté : {cod} !</target>
+        <target>{citizen} nous a quittés : {cod} !</target>
       </segment>
     </unit>
     <unit id="6TXzJgz" name="{citizen} hat das Stadtgebiet in Richtung {direction} verlassen.">
