--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -268,7 +268,7 @@
       </notes>
       <segment>
         <source>Die letzte Anzeige hat das Fass zum Überlaufen gebracht. {citizen} wurde von den Bürgern der Stadt verbannt!</source>
-        <target>La dernière plainte a été celle de trop. {citizen} a été banni de la ville !</target>
+        <target>Les citoyens ont décidé de bannir {citizen} de la communauté !</target>
       </segment>
     </unit>
     <unit id="gaDgdbl" name="Du kannst die Stadt von hier aus nicht betreten.">
